--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         steps on that journey. Thanks for reading and I wish you all well. I have provided you with my most recent photo
         below so you can match a face to the name.</p>
       <figure>
-        <img src="/images/female_avatar.png" alt="a faceless female avatar in a blazer" width="400">
+        <img src="images/female_avatar.png" alt="a faceless female avatar in a blazer" width="400">
         <figcaption>*not an accurate representaton of the author, who loathes being photographed*
         </figcaption>
       </figure>
@@ -65,7 +65,7 @@
         cool is that? You and I could have been born as otters. There would be a lot of swimming, playing and searching
         out things to eat (mostly fish &mdash; if you're not into seafood, maybe this isn't such a happy thought). </p>
       <figure>
-        <img src="/images/otter.png" alt="A cute otter standing and looking at the camera" width="400">
+        <img src="images/otter.png" alt="A cute otter standing and looking at the camera" width="400">
         <figcaption>Image by <a
             href="https://pixabay.com/users/ambquinn-4464111/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8350064">Angela</a>
           from <a
